# dev-resources

./: .gitignore  404.html  LICENSE  README.md  config.toml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: gh-pages.yaml
angular/: index.html
angular/templates/: index.html
architecture/: index.html
c/: index.html
c-plus/: index.html
c-sharp/: index.html
dart/: index.html
django/: index.html
django/templates/: index.html
docs/: index.md
docs/angular/: index.md  templates.md
docs/django/: index.md  templates.md
docs/flutter/: index.md  templates.md
docs/static/css/: extra.css
features/: index.html
flutter/: index.html
flutter/templates/: index.html
go/: index.html
java/: index.html
javascript/: index.html
javascript/articles/: index.html
javascript/backend/express/: index.html
javascript/backend/hapi/: index.html
javascript/backend/nest/: index.html
javascript/frontend/react/: index.html
javascript/frontend/svelte/: index.html
javascript/frontend/vue/: index.html
javascript/templates/: index.html
javascript/test/: index.html
kotlin/: index.html
laravel/: index.html
matlab/: index.html
objective-c/: index.html
other/: index.html
php/: index.html
python/: index.html
python/articles/: index.html
python/templates/: index.html
python/test/: index.html
python/web/django/: index.html
python/web/fastapi/: index.html
python/web/flask/: index.html
r/: index.html
ruby/: index.html
rust/: index.html
search/: search_index.json
snippets/: index.html
(+27 files in other folders)
